Fix overflow new list home

--- a/2016/src/styles/pages/_home.scss
+++ b/2016/src/styles/pages/_home.scss
@@ -33,7 +33,6 @@
     width: 50%;
     height: 250px;
     background-color: $dark-grey;
-    overflow: hidden;
 
     @media screen and (max-width: 768px) {
       width: 100%;
@@ -43,12 +42,14 @@
       width: 33%;
     }
 
-    img {
-      position: absolute;
-      top: 50%;
-      left: 50%;
+    .container-img {
       width: 100%;
-      transform: translate(-50%,-50%);
+      height: 100%;
+      overflow: hidden;
+    }
+
+    img {
+      width: 100%;
     }
 
     .content-title-new {
